#S12P11A609-326 hotfix: 데일리 로직 머지 안된거 추가