@@ -33,7 +33,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Random;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
@@ -94,7 +93,7 @@ public class QuestionService {
             List<QuestionDto> questions = dailyQuestions.stream()
                     .map(ServedQuestion::getQuestion)
                     .map(QuestionDto::from)
-                    .collect(Collectors.toList());
+                    .toList();
 
             listValueOperations.set(cacheKey, questions, Duration.ofDays(1)); // TTL 설정 (1일)
             return questions;
@@ -111,9 +110,12 @@ public class QuestionService {
     @Transactional
     public List<Question> CreateRandomQuestions(Member member) {
 
-        // 데일리 생성 로직이 현재는 로그인 시 생성하는 방식인데 스케줄러 써서 개선할 수 있을 것 같다.
-        // 추가로 개인별 맞춤으로 다른 가중치도 추가할 예정
-        // 현재 날짜
+        // 가중치 계산
+        // 푼 날짜, 풀었는지 여부 가중치만 설정되어있음
+        // 답변 수, 도전 수 가중치 추가
+        // 직무 추가
+
+        //현재 날짜
         LocalDate currentDate = LocalDate.now();
 
         // 1. Member가 최근 5일 내에 제공받은 질문 조회
@@ -125,7 +127,7 @@ public class QuestionService {
         Map<Long, Long> questionWeights = new HashMap<>();
 
         for (ServedQuestion servedQuestion : recentServedQuestions) {
-            long daysSinceServed = (long) ChronoUnit.DAYS.between(servedQuestion.getServedAt(), currentDate);
+            long daysSinceServed = ChronoUnit.DAYS.between(servedQuestion.getServedAt(), currentDate);
             long weight;
             long notSolvedQWeight = 2; // 못 푼 문제 가중치 상수
             long solvedQWeight = 1; // 푼 문제 가중치 상수
@@ -151,7 +153,38 @@ public class QuestionService {
             }
         }
 
-        // 5. 가중치 기반 랜덤 선택
+        // [추가] 5. 추가 가중치 적용: 답변 수, 도전 수, 희망 직무
+        long answerWeight = 1; // 답변 수당 가중치
+        long challengeWeight = 1; // 도전 수당 가중치
+        long jobMatchWeight = 100; // 희망 직무 일치 시 추가 가중치
+
+        String favoriteJob = member.getFavoriteJob().name(); // Member에서 희망 직무 가져오기
+
+        for (Question question : allQuestions) {
+            long currentWeight = questionWeights.get(question.getId());
+
+            // 답변 수 가중치 추가
+            currentWeight += question.getAnswerCount() * answerWeight;
+
+            // 도전 수 가중치 추가
+            currentWeight += question.getChallengeCount() * challengeWeight;
+
+            // 희망 직무 일치 여부 확인
+            if (favoriteJob != null) {
+                List<String> questionJobs = question.getQuestionJobs().stream()
+                        .map(QuestionJob::getJob)
+                        .map(Job::getJobRole)
+                        .map(JobRole::name)
+                        .toList();
+                if (questionJobs.contains(favoriteJob)) {
+                    currentWeight += jobMatchWeight;
+                }
+            }
+
+            questionWeights.put(question.getId(), currentWeight);
+        }
+
+        // 6. 가중치 기반 랜덤 선택
         List<Question> selectedQuestions = new ArrayList<>();
         Random random = new Random();
 
@@ -174,7 +207,7 @@ public class QuestionService {
                 }
             }
         }
-        // 6. 선택된 질문 저장 및 업데이트
+        // 7. 선택된 질문 저장 및 업데이트
         LocalDate today = LocalDate.now();
 
         for (Question question : selectedQuestions) {
@@ -321,7 +354,7 @@ public class QuestionService {
         List<JobDto> jobs = question.getQuestionJobs().stream()
                 .map(QuestionJob::getJob)
                 .map(JobDto::from)
-                .collect(Collectors.toList());
+                .toList();
 
         // 3. 결과를 Redis에 저장 (TTL: 1일)
         listValueOperations.set(cacheKey, jobs, Duration.ofDays(1));
@@ -353,7 +386,7 @@ public class QuestionService {
         List<SkillDto> skills = question.getQuestionSkills().stream()
                 .map(QuestionSkill::getSkill)
                 .map(SkillDto::from)
-                .collect(Collectors.toList());
+                .toList();
 
         // 3. 결과를 Redis에 저장 (TTL: 1일)
         listValueOperations.set(cacheKey, skills, Duration.ofDays(1));
